--- a/style.css
+++ b/style.css
@@ -57,6 +57,10 @@ span {
   font-size: 1.5rem;
 }
 
+#closedCookie {
+  cursor: pointer;
+}
+
 .hide {
   display: none;
 }
@@ -74,10 +78,17 @@ p {
 
 button {
   border-radius: 4px;
-  background: #FF9500;
+  background-color: #FF9500;
   width: min(19rem, 70%);
   padding: 1.6rem;
   font-size: 1.5rem;
   font-weight: bold;
   color: #FFFFFF;
+  cursor: pointer;
+  
+  transition: background-color, .3s;
+}
+
+button:hover {
+  background-color: #d37c02;
 }
